; ModuleID = '/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_trace_run_command.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/trace/extr_trace.c_trace_run_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trace_run_command(i8* %0, i32 (i32, i8**)* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32 (i32, i8**)*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 (i32, i8**)* %1, i32 (i32, i8**)** %5, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %9 = load i32, i32* @GFP_KERNEL, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i8** @argv_split(i32 %9, i8* %10, i32* %7)
  store i8** %11, i8*** %6, align 8
  %12 = load i8**, i8*** %6, align 8
  %13 = icmp ne i8** %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %29

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %17
  %21 = load i32 (i32, i8**)*, i32 (i32, i8**)** %5, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i8**, i8*** %6, align 8
  %24 = call i32 %21(i32 %22, i8** %23)
  store i32 %24, i32* %8, align 4
  br label %25

25:                                               ; preds = %20, %17
  %26 = load i8**, i8*** %6, align 8
  %27 = call i32 @argv_free(i8** %26)
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %25, %14
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i8** @argv_split(i32, i8*, i32*) #1

declare dso_local i32 @argv_free(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
